--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div id="card-stack-element">
     <div id="sedans-section" class="card-element orange-element">
       <div>
-        <img src="images/icon-sedans.svg">
+        <img src="images/icon-sedans.svg" alt="an icon image with a sedan">
         <h1 id="sedan-heading">SEDANS</h1>
         <p id="sedan-description">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in
           the city
@@ -34,7 +34,7 @@
 
     <div id="suvs-section" class="card-element dark-cyan-element">
       <div>
-        <img src="./images/icon-suvs.svg">
+        <img src="./images/icon-suvs.svg" alt="an icon image with an SUV">
         <h1 id="suv-heading">SUVS</h1>
         <p id="suv-description">Take an SUV for its spacious interior, power, and versatility. Perfect for your next
           family
@@ -49,7 +49,7 @@
 
     <div id="luxury-section" class="card-element very-dark-cyan-element">
       <div>
-        <img src="./images/icon-luxury.svg">
+        <img src="./images/icon-luxury.svg" alt="an icon image of a luxury car">
         <h1 id="luxury-heading">LUXURY</h1>
         <p id="luxury-description">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort
           of
