added main element

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div id="card-stack-element">
+  <main id="card-stack-element">
     <div id="sedans-section" class="card-element orange-element">
       <div>
         <img src="images/icon-sedans.svg" alt="an icon image with a sedan">
@@ -62,7 +62,7 @@
         <button id="luxury-button" type="button" class="btn-style">Learn More</button>
       </div>
     </div>
-  </div>
+  </main> 
 </body>
 
 </html>
